save point- trusted banner fixed need to solve spacing

--- a/src/components/trustedBanner.module.css
+++ b/src/components/trustedBanner.module.css
@@ -1,5 +1,4 @@
 .container {
-    /* margin-bottom: 50px; */
     width: 110%;
     position: relative;
     right: 5%;
@@ -45,7 +44,7 @@
     height: 60%;
     display: flex;
     align-items: center;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: bold;
     margin: auto;
 }
@@ -56,26 +55,95 @@
     text-align: center;
 }
 
-@media screen and (max-width: 767px) {
-    .container {
-        justify-content: center;
+@media screen and (max-width: 1199px) {
+    .header {
+        font-size: 1.5rem;
     }
+    .count {
+        font-size: 1.5rem;
+    }
+    .text {
+        font-size: .9rem;
+    } 
+}
+
+@media screen and (max-width: 991px) {
     .itemsContainer {
-        display: none;
+        justify-content: flex-end;
     }
     .header {
-        text-align: center;
+        font-size: 1.4rem;
+    }
+    .count {
+        font-size: 1.4rem;
+    }
+    .text {
+        font-size: .7rem;
+    } 
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        font-size: 1.2rem;
+    }
+    .count {
+        font-size: 1.2rem;
+    }
+    .text {
+        font-size: .7rem;
+    }
+    .container {
+        position:absolute;
+        left:0;
+        right:0;
+        width: 100%;
+        padding: 25px;
+        border-radius: 0px;
     }
 }
 
-@media screen and (max-width: 580px) {
-    .container {
-        width: 100%;
-        right: 0%;
-        margin: 0;
-        padding: 3% 0 3% 0;
-    }
+@media screen and (max-width: 687px) {
     .header {
-        font-size: 20px;
-    }    
+        font-size: 1rem;
+    }
+    .count {
+        font-size: 1rem;
+    }
+    .text {
+        font-size: .75rem;
+    } 
+}
+
+@media screen and (max-width: 639px) {
+    .text {
+        font-size: .58rem;
+    } 
+}
+
+@media screen and (max-width: 614px) {
+    .text {
+        font-size: .55rem;
+    } 
+}
+
+@media screen and (max-width: 575px) {
+    .container {
+        padding: 25px 0px; 
+    }
+}
+
+@media screen and (max-width: 538px) {
+    .text {
+        font-size: .55rem;
+    } 
+}
+
+@media screen and (max-width: 399px) {
+    .container {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .items {
+        margin: 0 15px;
+    }
 }
